--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(approx_joint_jeffreys)
 export(approx_marginal_jeffreys)
 export(arima_pi)
 export(avg_coverage_arima)
+export(avg_coverage_struct)
 export(dacv_arma)
 export(exact_joint_jeffreys)
 export(exact_marginal_jeffreys)
