--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,4 @@ export(exact_marginal_jeffreys)
 export(information_arma)
 export(struct_pi)
 import(KFAS)
-useDynLib(arimaPI, .registration=TRUE)
+useDynLib(tsPI, .registration=TRUE)
