--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: tsPI
-Title: Bayesian Prediction Intervals for ARIMA Processes and Structural Time Series
+Title: Improved Prediction Intervals for ARIMA Processes and Structural Time Series
 Version: 1.0.0
 Date: 2015-09-13
 Author: Jouni Helske
 Maintainer: Jouni Helske <jouni.helske@jyu.fi>
 Imports: KFAS
-Description: Bayesian prediction intervals for ARIMA processes and structural time series with exogenous variables which take account the parameter uncertainty, leading to more accurate coverage probabilities in frequentist sense. Package uses computationally efficient importance sampling and root solving based on the predicted values and prediction errors, allowing computation of standard errors for prediction limits.
+Description: Prediction intervals for ARIMA and structural time series models using importance sampling approach with uninformative priors for model parameters, leading to more accurate coverage probabilities in frequentist sense. Instead of sampling the future observations and hidden states of the state space representation of the model, only model parameters are sampled, and the method is based solving the equations corresponding to the conditional coverage probability of the prediction intervals. This makes method relatively fast compared to for example MCMC methods, and standard errors of prediction limits can also be computed straightforwardly.
 License: GPL-3
 NeedsCompilation: yes
 Encoding: UTF-8
