--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,4 +12,5 @@ export(exact_marginal_jeffreys)
 export(information_arma)
 export(struct_pi)
 import(KFAS)
+useDynLib(tsPI)
 useDynLib(tsPI, .registration=TRUE)
