--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: r
 sudo: required
 
-warnings_are_errors: false
+warnings_are_errors: true
 
-r_check_args: "--as-cran --no-manual"
+r_check_args: "--as-cran"
+
+r_github_packages:
+ - jimhester/covr
+ 
+after_success:
+ - Rscript -e 'library(covr);codecov()'
