--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,26 @@ export(exact_joint_jeffreys)
 export(exact_marginal_jeffreys)
 export(information_arma)
 export(struct_pi)
-import(KFAS)
+importFrom(KFAS,KFS)
+importFrom(KFAS,SSMarima)
+importFrom(KFAS,SSModel)
+importFrom(KFAS,SSMtrend)
+importFrom(KFAS,simulateSSM)
+importFrom(stats,arima)
+importFrom(stats,arima.sim)
+importFrom(stats,dnorm)
+importFrom(stats,end)
+importFrom(stats,frequency)
+importFrom(stats,logLik)
+importFrom(stats,optim)
+importFrom(stats,pnorm)
+importFrom(stats,predict)
+importFrom(stats,rchisq)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
+importFrom(stats,toeplitz)
+importFrom(stats,ts)
+importFrom(stats,uniroot)
+importFrom(stats,window)
 useDynLib(tsPI)
 useDynLib(tsPI, .registration=TRUE)
