--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(struct_pi)
 importFrom(KFAS,KFS)
 importFrom(KFAS,SSMarima)
 importFrom(KFAS,SSModel)
+importFrom(KFAS,SSMseasonal)
 importFrom(KFAS,SSMtrend)
 importFrom(KFAS,simulateSSM)
 importFrom(stats,arima)
