--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ r_check_args: "--as-cran"
 
 r_github_packages:
  - jimhester/covr
- 
+
 after_success:
- - Rscript -e 'library(covr);codecov(type = "all")'
+ - Rscript -e 'library(covr);codecov()'
