--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ importFrom(stats,dnorm)
 importFrom(stats,end)
 importFrom(stats,frequency)
 importFrom(stats,logLik)
+importFrom(stats,na.exclude)
 importFrom(stats,optim)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
